--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -9,7 +9,9 @@
         // 1 es piedra, 2 es papel, 3 es tijera
     
         let jugador = 0;
-        let pc = 2;
+        min = 1;
+        max = 3;
+        let pc = Math.floor(Math.random()*(max-min+1)+min);
         jugador = prompt("Elije 1 para piedra, 2 para papel, 3 para tijera");
         if (jugador ==1){
             alert("Elegiste rock");
@@ -30,8 +32,16 @@
         // Combate
         if(pc == jugador){
             alert("Empate");
+        }else if(jugador ==1 && pc == 3){
+            alert("Ganaste");
+        }else if(jugador == 2 && pc == 1){
+            alert("ganaste");
+        }else if(jugador == 3 && pc==2){
+            alert("Ganaste");
+        }else {
+            alert("perdiste")
         }
-        
+
     </script>
 </head>
 <body>
