--- a/piedrapapeltijera.html
+++ b/piedrapapeltijera.html
@@ -7,11 +7,14 @@
     <title>Piedra, papel o tijera</title>
     <script>
         // 1 es piedra, 2 es papel, 3 es tijera
-    
+        function aleatorio(mini,maxi) {
+            return Math.floor(Math.random()*(maxi-mini+1)+min);
+            
+        }
         let jugador = 0;
         min = 1;
         max = 3;
-        let pc = Math.floor(Math.random()*(max-min+1)+min);
+        let pc = aleatorio(min,max);
         jugador = prompt("Elije 1 para piedra, 2 para papel, 3 para tijera");
         if (jugador ==1){
             alert("Elegiste rock");
