--- a/index.html
+++ b/index.html
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Redirección a piedrapapeltijera.html</title>
-  <meta http-equiv="refresh" content="0; url=piedrapapeltijera.html">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Perfil Profesional</title>
+  <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
-  <p>Redirigiendo a piedrapapeltijera.html...</p>
-</body>
-</html>
+  <!-- Una seccion-->
+  <p>Aquí va mi foto , un margen y una descripción</p>
+  <div class="section">
+    <h1>Perfil Profesional</h1>
+    <h2>Profesión / Área:</h2>
+    <p>Administrador de R&HSOLUTONS SAC, empresa dedicada a la venta de computadoras, suministros informáticos, cableado estructurado de redes y consultoría en tecnologías de la información y firmar contratos de soporte técnico con empresas cliente. Trabajé en el departamento de sistemas, área de hardware y redes en diversas compañías realizando labores de cableado estructurado, mantenimiento de equipos de cómputo e instalación, configuración y puesta en marcha de redes, servidores LINUX.</p>
+  </div>
+  
+  <div class="section">
+    <h2>Habilidades</h2>
+    <div>
+      <h3>Capacidad 1 / Servidores</h3>
+      <ul>
+        <li>
+          <strong>Habilidades:</strong> Configuración de servidores de correo, datos y redes en LINUX.
+        </li>
+        <li>
+          <strong>Experiencia:</strong> 8 años.
+        </li>
+        <li>
+          <strong>Logros:</strong> Instalación, configuración y puesta en marcha de servidor de correos en empresas privadas.
+        </li>
+      </ul>
+    </div>
+    <div>
+      <h3>Capacidad 2 / Redes</h3>
+      <ul>
+        <li>
+          <strong>Habilidades:</strong> Cableado estructurado de redes LAN (Cableadas e inalámbricas).
+        </li>
+        <li>
+          <strong>Experiencia:</strong> 8 años.
+        </li>
+        <li>
+          <strong>Logros:</strong> Cableado estructurado de redes (Cableadas e inalámbricas) en empresas privadas. Configuración de software de Video Vigilancia.
+        </li>
+      </ul>
+    </div>
+  </div>
+  
+  <div class="section">
+    <h2>Formación académica</h2>
+    <ul>
+      <li>
+        <strong>Titulación:</strong> Estudiante de la Carrera de "Matemática e Informática" en la Universidad Nacional de Educación Enrique Guzmán Y Valle.
+      </li>
+      <li>
+        <strong>Titulación:</strong> Universidad Nacional de Ingeniería CEPS - Ensamblaje de Microcomputadoras.
+      </li>
+    </ul>
+  </div>
+  
+  <div class="section">
+    <h2>Otros datos</h2>
+    <ul>
+    <li>
+    <strong>Nombres y Apellidos:</strong> HENRY RICHARD FLORES BAZURTO
+    </li>
+    <li>
+    <strong>Dirección 1:</strong> Urb. V.R.H de la Torre Mz U1 L 13 Independencia
+    </li>
+    <li>
+    <strong>Dirección 2:</strong> Pasaje el Sol 353 Baños del Inca Cajamarca
+    </li>
+    <li>
+    <strong>Teléfono:</strong> 931637915 / 902566961
+    </li>
+    <li>
+    <strong>Email:</strong> henry.flores@ryhsolutions.com / hflores07@hotmail.com
+    </li>
+    </ul>
+    
+      </div>
+      <div class="section">
+        <h2>Otros</h2>
+        <ul>
+          <li>ESAN Diplomado en gestión de Negocios</li>
+          <li>"Legislación y técnicas de Aduanas" UNMS</li>
+        </ul>
+      </div>
+      <div class="section">
+        <h2>Idiomas</h2>
+        <p>Inglés: Nivel Intermedio</p>
+      </div>
+      <div class="section">
+        <h2>Informática</h2>
+        <ul>
+          <li>Ms Office 2013: Intermedio</li>
+          <li>Licencia de Conducir A2B Q40111709 (Auto propio)</li>
+          <li>Fedora Linux: Nivel Avanzado</li>
+        </ul>
+      </div>
+    </body>
+    </html>
