--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 <body>
-  <!-- Una seccion-->
+  <!-- Una seccion 2-->
   <p>Aquí va mi foto , un margen y una descripción</p>
   <div class="section">
     <h1>Perfil Profesional</h1>
