secciones nuevas head

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Una seccion 2-->
-  <p>Aquí va mi foto , un margen y una descripción</p>
+  <p>Aquí va mi foto , un margen y una descripción. A la mitad debe ir mis años de experiencia</p>
   <div class="section">
     <h1>Perfil Profesional</h1>
     <h2>Profesión / Área:</h2>
