nuevo fondo y letra

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Una seccion 2-->
-  <p>Aquí va mi foto , un margen y una descripción. A la mitad debe ir mis años de experiencia</p>
+  <section class="name">
+    <h1 id="name1">HENRY RICHARD FLORES BAZURTO</h1>
+  </section>
+  <section class="foto">
+    <!-- Foto reciente-->
+    <div class="bordes1">
+      <img id="fotoHenry" src="./Henry.jpg" alt="Foto Henry" height="250" width="250" >
+    </div>
+    
+    <h1>8 años de experiencia en Computación e Informática</h1> 
+  </section>
+  
   <div class="section">
     <h1>Perfil Profesional</h1>
     <h2>Profesión / Área:</h2>
