--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <header>
     <nav>
       <ul class="main-nav">
-        <li class="main-nav__item"><a href="#">Proyectos Personales</a></li>
-        <li class="main-nav__item"><a href="#">Proyectos de trabajo</a></li>
-        <li class="main-nav__item"><a href="www.google.com">Juegos</a></li>
-        <li class="main-nav__item"><a href="#">Blog</a></li>
+        <li class="main-nav__item"><a href="http://henryflores.store/">Proyectos Personales</a></li>
+        <li class="main-nav__item"><a href="http://hsolutions.website/">Proyectos de trabajo</a></li>
+        <li class="main-nav__item"><a href="#">Juegos</a></li>
+        <li class="main-nav__item"><a href="https://www.blogger.com/blog/posts/7611168681843406834?bpli=1&pli=1">Blog</a></li>
       </ul>
     </nav>
   </header>
