--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h2>Formación académica</h2>
                 <ul>
                     <li>
-                        <strong>Titulación:</strong> Estudiante de "Desarrollo Web Backend and Frontend" en Platzi.
+                        <strong>Titulación:</strong> Estudiante de "Desarrollo Web FullStack" en Platzi.
                     </li>
                     <li>
                         <strong>Titulación:</strong> Diplomado en "Gestion de negocio propio".
@@ -153,7 +153,7 @@
                 <h2>Otros datos de interés</h2>
                 <ul>
                     <li>
-                        <strong>Idiomas:</strong> Español (Nativo), Inglés (Básico).
+                        <strong>Idiomas:</strong> Español (Nativo), Inglés (Imtermedio).
                     </li>
                     <li>
                         <strong>Disponibilidad:</strong> Inmediata.
@@ -174,27 +174,32 @@
                     </li>
                 
                     <li>
-                        <strong>Dirección 1:</strong> Urb. V.R.H de la Torre Mz U1 L 13 Independencia.
-                    </li>
-
-                    <li>
                         <strong>Dirección 2:</strong> Pasaje el Sol 353 Baños del Inca Cajamarca.
                     </li>
 
                     <li>
-                        <strong>Teléfono:</strong> 987845754 / 902566961
+                        <strong>Teléfono:</strong> Perú-987845754
                     </li>
                     
                     <li>
                         <strong>Correo electrónico:</strong>
-                        mailto: hflores07@hotmail.com
+                        correo
                     </li>
             </section>
 
         </main>
         <footer>
-            <span>Redes sociales</span>
-            <span>Otros</span>
+            <h3>Eco-store</h3>
+            <p>Careers</p>
+            <p>Terms and conditions</p>
+            <p>Eco-store inc</p>
+            <p>Terms and conditions</p>
+            <p>Eco-store inc</p>
+            <div class="social-media">
+                <img src="./assets/img/instagram-logo.png" alt="">
+                <img src="./assets/img/twitter-logo.png" alt="">
+                <img src="./assets/img/facebook-logo.png" alt="">
+            </div>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
