Cambio de profesión

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 <div class="experiencia col-sm-4">
                     <p>
-                        8 años de experiencia en computación e informática
+                        Desarrollador FullStack freelance, con experiencia en el desarrollo de aplicaciones web y móviles.
                     </p>
                 </div>
             </div>
